Allow scrolling on small screens (netbooks). Removing status bar fix for now.

--- a/jamendoradio/JamendoRadio/styles/options.css
+++ b/jamendoradio/JamendoRadio/styles/options.css
@@ -1,7 +1,8 @@
 ﻿@import url(options/jquery-ui-1.7.2.custom.css);
 body
 {
-	overflow: hidden; padding-bottom:15px; /*Annoying status bar fix!*/
+	height: 97%;
+	Xoverflow: hidden; Xpadding-bottom:15px; /*Annoying status bar fix!*/
 }
 ul
 {
